# vimers

./: .gitignore  Cargo.toml  README.md
src/: common.rs  consumer_key  consumer_secret  main.rs  twitter_settings
