[package]
name = "tw-egg"
version = "0.1.0"
authors = ["Luis Vegas <luisvegasmor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.15"
yansi = "0.5.0"
tokio = { version = "0.2.8", features = ["time", "rt-core", "macros", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
telegram-bot = "0.7"
